added option to exclude tags (#83)

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -15,9 +15,10 @@
       "note_type": "",
       "note_type_id": null,
       "read": true,
-      "tags": [
-        ""
-      ],
+      "tags": {
+        "exclude": [],
+        "include": []
+      },
       "unknowns_field": "",
       "unknowns_field_index": null
     }
