added shortcuts to generators (#106)

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -32,7 +32,9 @@
   "recalc_suspend_known_new_cards": false,
   "shortcut_browse_all_same_unknown": "Shift+L",
   "shortcut_browse_ready_same_unknown": "L",
+  "shortcut_frequency_file_generator": "Ctrl+Shift+F",
   "shortcut_learn_now": "Ctrl+Alt+N",
+  "shortcut_readability_report_generator": "Ctrl+Shift+R",
   "shortcut_recalc": "Ctrl+M",
   "shortcut_set_known_and_skip": "K",
   "shortcut_settings": "Ctrl+O",
