--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ jobs:
       matrix:
         python_version: ['3.9']
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        anki: ['2.1.66']
     steps:
     - uses: actions/checkout@v3
     - uses: tlambert03/setup-qt-libs@v1  # installs libraries necessary to run a Qt desktop environment on linux runners
@@ -20,14 +19,14 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install virtualenv
+        python -m pip install --upgrade pip virtualenv
         python -m virtualenv pyenv
         if [ "${{ runner.os }}" = "Windows" ]; then
           source pyenv/Scripts/activate
         else
           source pyenv/bin/activate
         fi
+        python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
     - name: Lint & Test
       shell: bash
