removed 'alpha' from manifest.json (#121)

--- a/ankimorphs/manifest.json
+++ b/ankimorphs/manifest.json
@@ -2,6 +2,6 @@
   "conflicts": [
     "MorphMan"
   ],
-  "name": "ankimorphs-alpha",
-  "package": "ankimorphs-alpha"
+  "name": "ankimorphs",
+  "package": "ankimorphs"
 }
