--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -27,7 +27,10 @@
   "preprocess_ignore_round_bracket_contents": false,
   "preprocess_ignore_slim_round_bracket_contents": false,
   "preprocess_ignore_suspended_cards_content": false,
+  "recalc_due_offset": 50000,
   "recalc_interval_for_known": 21,
+  "recalc_number_of_morphs_to_offset": 100,
+  "recalc_offset_new_cards": false,
   "recalc_on_sync": false,
   "recalc_read_known_morphs_folder": false,
   "recalc_suspend_known_new_cards": false,
