--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,11 @@ filterwarnings = [
 # required_plugins: plugins that must be present for pytest to run
 # pytest-qt: allows for writing tests for PyQt5, PyQt6, PySide2 and PySide6 applications.
 # pytest-xvfb: allows tests to be run without windows popping up during GUI tests or on systems without a display (like a CI).
-# pytest-expect: stores test expectations by saving the set of failing tests, allowing them to be marked as xfail when running them in future
-required_plugins = "pytest-qt pytest-xvfb pytest-expect pytest-sugar"
+# pytest-expect: stores test expectations by saving the set of failing tests, allowing them to be marked as xfail when running them in future.
+# pytest-sugar: showing failures and errors instantly, adding a progress bar, improving the test results, and making the output look better.
+# pytest-randomly: randomly order tests and control random.seed.
+# - use "pytest --randomly-seed=xxxxxxx" to repeate failing seeds
+required_plugins = "pytest-qt pytest-xvfb pytest-expect pytest-sugar pytest-randomly"
 # xfail_strict = True: tests marked with @pytest.mark.xfail that actually succeed will by default fail the test suite
 xfail_strict = "True"
 # addopts: set of command line arguments as if they had been specified by the user
@@ -68,7 +71,6 @@ markers = [
 [tool.vulture]
 paths = ["ankimorphs"]
 exclude = [
-  "ankimorphs/deps/",
   "ankimorphs/ui/",
   "ankimorphs/debug_utils.py",
   "ankimorphs/table_utils.py",
