lemma priority wip

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -1,8 +1,32 @@
 {
+  "algorithm_all_morphs_target_distance": 1,
+  "algorithm_average_priority_all_morphs": 0,
+  "algorithm_inflection_priority": true,
+  "algorithm_learning_morphs_target_distance": 5,
+  "algorithm_lemma_priority": false,
+  "algorithm_lower_target_all_morphs": 4,
+  "algorithm_lower_target_all_morphs_coefficient_a": 0,
+  "algorithm_lower_target_all_morphs_coefficient_b": 1,
+  "algorithm_lower_target_all_morphs_coefficient_c": 0,
+  "algorithm_lower_target_learning_morphs": 2,
+  "algorithm_lower_target_learning_morphs_coefficient_a": 1,
+  "algorithm_lower_target_learning_morphs_coefficient_b": 0,
+  "algorithm_lower_target_learning_morphs_coefficient_c": 0,
+  "algorithm_total_priority_all_morphs": 1,
+  "algorithm_total_priority_unknown_morphs": 10,
+  "algorithm_upper_target_all_morphs": 6,
+  "algorithm_upper_target_all_morphs_coefficient_a": 1,
+  "algorithm_upper_target_all_morphs_coefficient_b": 0,
+  "algorithm_upper_target_all_morphs_coefficient_c": 0,
+  "algorithm_upper_target_learning_morphs": 1,
+  "algorithm_upper_target_learning_morphs_coefficient_a": 1,
+  "algorithm_upper_target_learning_morphs_coefficient_b": 0,
+  "algorithm_upper_target_learning_morphs_coefficient_c": 0,
   "filters": [
     {
       "extra_highlighted": false,
       "extra_score": false,
+      "extra_score_terms": false,
       "extra_unknowns": false,
       "extra_unknowns_count": false,
       "field": "(none)",
