--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,15 @@ exclude = [
   "ankimorphs/morphemizers/spacy_wrapper.py",
   "ankimorphs/morphemizers/mecab_wrapper.py"
 ]
-ignore_names = ["print_*", "_refresh_needed", "_v3", "reopen", "closeWithCallback", "closeEvent"]
+ignore_names = [
+  "print_*",
+  "_refresh_needed",
+  "_v3",
+  "reopen",
+  "closeWithCallback",
+  "closeEvent",
+  "recalc_toolbar_stats_use_seen"
+]
 min_confidence = 60
 sort_by_size = true
 verbose = false
