--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,7 +86,8 @@ ignore_names = [
   "reopen",
   "closeWithCallback",
   "closeEvent",
-  "recalc_toolbar_stats_use_seen"
+  "recalc_toolbar_stats_use_seen",
+  "recalc_unknowns_field_shows_lemmas"
 ]
 min_confidence = 60
 sort_by_size = true
