--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -41,6 +41,9 @@
       }
     }
   ],
+  "hide_inflection_toolbar": false,
+  "hide_lemma_toolbar": false,
+  "hide_recalc_toolbar": false,
   "preprocess_ignore_bracket_contents": false,
   "preprocess_ignore_names_morphemizer": false,
   "preprocess_ignore_names_textfile": false,
