--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -31,7 +31,7 @@
       "extra_unknowns_count": false,
       "field": "(none)",
       "modify": true,
-      "morph_priority": "(none)",
+      "morph_priority_selection": "(none)",
       "morphemizer_description": "(none)",
       "note_type": "(none)",
       "read": true,
@@ -44,24 +44,20 @@
   "hide_inflection_toolbar": false,
   "hide_lemma_toolbar": false,
   "hide_recalc_toolbar": false,
+  "interval_for_known_morphs": 21,
   "preprocess_ignore_bracket_contents": false,
   "preprocess_ignore_names_morphemizer": false,
   "preprocess_ignore_names_textfile": false,
   "preprocess_ignore_round_bracket_contents": false,
   "preprocess_ignore_slim_round_bracket_contents": false,
   "preprocess_ignore_suspended_cards_content": false,
+  "read_known_morphs_folder": false,
   "recalc_due_offset": 500000,
-  "recalc_interval_for_known": 21,
   "recalc_move_known_new_cards_to_the_end": false,
   "recalc_number_of_morphs_to_offset": 100,
   "recalc_offset_new_cards": false,
   "recalc_on_sync": false,
-  "recalc_read_known_morphs_folder": false,
   "recalc_suspend_known_new_cards": false,
-  "recalc_toolbar_stats_use_known": false,
-  "recalc_toolbar_stats_use_seen": true,
-  "recalc_unknowns_field_shows_inflections": true,
-  "recalc_unknowns_field_shows_lemmas": false,
   "shortcut_browse_all_same_unknown": "Shift+L",
   "shortcut_browse_ready_same_unknown": "L",
   "shortcut_browse_ready_same_unknown_lemma": "Ctrl+Shift+L",
@@ -80,5 +76,9 @@
   "tag_known_manually": "am-known-manually",
   "tag_learn_card_now": "am-learn-card-now",
   "tag_not_ready": "am-not-ready",
-  "tag_ready": "am-ready"
+  "tag_ready": "am-ready",
+  "toolbar_stats_use_known": false,
+  "toolbar_stats_use_seen": true,
+  "unknowns_field_shows_inflections": true,
+  "unknowns_field_shows_lemmas": false
 }
