--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -25,6 +25,7 @@
   "filters": [
     {
       "extra_all_morphs": false,
+      "extra_all_morphs_count": false,
       "extra_highlighted": false,
       "extra_score": false,
       "extra_score_terms": false,
