--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -31,6 +31,7 @@
       "extra_highlighted": false,
       "extra_score": false,
       "extra_score_terms": false,
+      "extra_study_morphs": false,
       "extra_unknowns": false,
       "extra_unknowns_count": false,
       "field": "(none)",
