recalc tests pass

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -32,8 +32,8 @@
       "extra_score": false,
       "extra_score_terms": false,
       "extra_study_morphs": false,
-      "extra_unknowns": false,
-      "extra_unknowns_count": false,
+      "extra_unknown_morphs": false,
+      "extra_unknown_morphs_count": false,
       "field": "(none)",
       "modify": true,
       "morph_priority_selection": "(none)",
