added comments to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,21 @@
+# binaries
 *.pyc
 
-.vscode
+# macOS
 .DS_Store
+
+# IDE
+.vscode
 .idea
 
+# virtusl environments
 .venv
 .designer-venv
 
+# mdbook
 docs/book
 
+# misc ankimorphs files
 ankimorphs/meta.json
 ankimorphs.db
 ankimorphs*.ankiaddon
@@ -17,6 +24,6 @@ profile.svg
 tests/data/tests_outputs/*
 *.anki2-wal
 
-# test coverage stuff
+# pytest-cov
 .coverage
 htmlcov/
