--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -67,6 +67,7 @@
   "shortcut_browse_ready_same_unknown": "L",
   "shortcut_browse_ready_same_unknown_lemma": "Ctrl+Shift+L",
   "shortcut_generators": "Ctrl+Shift+G",
+  "shortcut_progress": "Ctrl+Shift+F",
   "shortcut_known_morphs_exporter": "Ctrl+Shift+E",
   "shortcut_learn_now": "Ctrl+Alt+N",
   "shortcut_recalc": "Ctrl+M",
