--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ disable = """
     too-few-public-methods,
     fixme,
     global-statement,
+    relative-beyond-top-level,
 """
 
 [tool.pylint.similarities]
