added option to ignore custom characters

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -52,7 +52,9 @@
   "hide_lemma_toolbar": false,
   "hide_recalc_toolbar": false,
   "interval_for_known_morphs": 21,
+  "preprocess_custom_characters_to_ignore": "",
   "preprocess_ignore_bracket_contents": false,
+  "preprocess_ignore_custom_characters": false,
   "preprocess_ignore_names_morphemizer": false,
   "preprocess_ignore_names_textfile": false,
   "preprocess_ignore_round_bracket_contents": false,
