--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -14,6 +14,8 @@ jobs:
         os: [ ubuntu-latest, windows-latest ]
     steps:
     - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
     - uses: actions/setup-python@v5
       with:
         python-version: '3.9'
