--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,6 +84,11 @@ repos:
     rev: v2.13
     hooks:
       - id: vulture
+  - repo: https://github.com/woodruffw/zizmor-pre-commit
+    rev: v0.9.2
+    hooks:
+      - id: zizmor
+        files: '.github/workflows/.*\.yml$'
   - repo: local
     hooks:
       - id: pylint
