--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ markers = [
 paths = ["ankimorphs"]
 exclude = [
   "ankimorphs/ui/",
-  "ankimorphs/debugging_utils.py",
+  "ankimorphs/debug_utils.py",
   "ankimorphs/table_utils.py",
   "ankimorphs/morphemizers/spacy_wrapper.py",
   "ankimorphs/morphemizers/mecab_wrapper.py"
