build action no longer fails fast

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python_version: ['3.9']
+        python_version: [3.9, 3.13]
         os: [ubuntu-latest, macOS-latest, windows-latest]
+      fail-fast: false
     steps:
     - uses: actions/checkout@v4
       with:
