--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -63,11 +63,11 @@
   "preprocess_ignore_suspended_cards_content": false,
   "read_known_morphs_folder": false,
   "recalc_due_offset": 500000,
-  "recalc_move_known_new_cards_to_the_end": false,
+  "recalc_move_new_cards_to_the_end": "Never",
   "recalc_number_of_morphs_to_offset": 100,
   "recalc_offset_new_cards": false,
   "recalc_on_sync": false,
-  "recalc_suspend_known_new_cards": false,
+  "recalc_suspend_new_cards": "Never",
   "shortcut_browse_all_same_unknown": "Shift+L",
   "shortcut_browse_ready_same_unknown": "L",
   "shortcut_browse_ready_same_unknown_lemma": "Ctrl+Shift+L",
@@ -79,15 +79,18 @@
   "shortcut_set_known_and_skip": "K",
   "shortcut_settings": "Ctrl+Shift+S",
   "shortcut_view_morphemes": "Ctrl+Alt+V",
-  "skip_only_known_morphs_cards": true,
+  "skip_dont_when_contains_fresh_morphs": false,
+  "skip_no_unknown_morphs": true,
   "skip_show_num_of_skipped_cards": true,
   "skip_unknown_morph_seen_today_cards": true,
+  "skip_when_contains_fresh_morphs": true,
   "tag_fresh": "am-fresh-morphs",
   "tag_known_automatically": "am-known-automatically",
   "tag_known_manually": "am-known-manually",
   "tag_learn_card_now": "am-learn-card-now",
   "tag_not_ready": "am-not-ready",
   "tag_ready": "am-ready",
+  "tag_suspended_automatically": "am-suspended-automatically",
   "toolbar_stats_use_known": false,
   "toolbar_stats_use_seen": true
 }
