--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,8 @@ ignore_names = [
   "closeEvent",
   "toolbar_stats_use_seen",
   "extra_fields_display_lemmas",
-  "min_occurrence"
+  "min_occurrence",
+  "skip_dont_when_contains_fresh_morphs"
 ]
 min_confidence = 60
 sort_by_size = true
