Allow users to use Stability (FSRS) instead of Interval to determine known threshold

--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -62,6 +62,7 @@
   "preprocess_ignore_slim_round_bracket_contents": false,
   "preprocess_ignore_suspended_cards_content": false,
   "read_known_morphs_folder": false,
+  "use_stability_for_known_threshold": false,
   "recalc_due_offset": 500000,
   "recalc_move_new_cards_to_the_end": "Never",
   "recalc_number_of_morphs_to_offset": 100,
