--- a/ankimorphs/config.json
+++ b/ankimorphs/config.json
@@ -36,7 +36,8 @@
       "extra_study_morphs": false,
       "extra_unknown_morphs": false,
       "extra_unknown_morphs_count": false,
-      "field": "(none)",
+      "read_field": "(none)",
+      "modify_field": "(none)",
       "modify": true,
       "morph_priority_selection": "(none)",
       "morphemizer_description": "(none)",
