--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,16 @@ skip_gitignore = "True"
 line_length = "88"
 
 [tool.mypy]
-warn_return_any = "True"
-warn_unused_configs = "True"
-ignore_missing_imports = "True"
+mypy_path = ["."]
+warn_return_any = true
+warn_unused_configs = true
+ignore_missing_imports = true
 follow_imports = "silent"
 disable_error_code = ["method-assign"]
-strict = "True"
+strict = true
+files = ["ankimorphs", "test"]
+exclude = ["ankimorphs/ui/", "test/data"]
+
 
 [tool.pylint]
 
