--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,14 @@ strict = true
 files = ["ankimorphs", "test"]
 exclude = ["ankimorphs/ui/", "test/data"]
 
+[tool.pyright]
+typeCheckingMode = "basic"
+reportMissingImports = true
+reportOptionalMemberAccess = false
+reportIncompatibleMethodOverride = false
+reportAttributeAccessIssue = false
+reportInvalidTypeForm = false
+exclude = ["ankimorphs/ui/", "test/data"]
 
 [tool.pylint]
 
